# LLEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
demo/: CMakeLists.txt
demo/res/maps/: demo_map.json
demo/res/meshes/: barrel.glb  bullet.glb  level_demo.glb
demo/src/: BulletNode.cpp  BulletNode.hpp  ExposureTextNode.cpp  ExposureTextNode.hpp  FPSTextNode.cpp  FPSTextNode.hpp  FadingPointLightNode.cpp  FadingPointLightNode.hpp  MainCamera.cpp  MainCamera.hpp  ResolutionTextNode.cpp  ResolutionTextNode.hpp  main.cpp
src/: BulletPhysicsServer.cpp  BulletPhysicsServer.hpp  CMakeLists.txt  Context.hpp  CustomNodeType.cpp  FPSMeter.cpp  FPSMeter.hpp  GameInstance.cpp  LLShooter.cpp  LLShooter.hpp  NodeProperty.cpp  PhysicsServer.cpp  PhysicsServer.hpp  RenderingServer.cpp  RenderingServer.hpp  SceneFile.cpp  SceneJSON.cpp  SceneTree.cpp  SceneTree.hpp  builtin_node_registration.cpp  consts_and_enums.hpp  logger.cpp  main.cpp  maps.cpp  maps.hpp  node_registration.cpp  random.cpp  start.cpp  uninitialized_error.hpp
src/common/: BitmapFont.cpp  BitmapFont.hpp  FPSMeter.cpp  FPSMeter.hpp  GLTF.cpp  GLTF.hpp  IMesh.hpp  KTXTexture.cpp  KTXTexture.hpp  Map.cpp  Map.hpp  Mesh.cpp  Mesh.hpp  SceneJSON.cpp  SceneJSON.hpp  Skybox.hpp  Texture.cpp  Texture.hpp  VkFormatInfo.cpp  VkFormatInfo.hpp
src/common/core/: BitmapFont.cpp  BitmapFont.hpp  Cubemap.cpp  Cubemap.hpp  FreeTypeFont.cpp  FreeTypeFont.hpp  GLFWWindow.cpp  GLFWWindow.hpp  GLTF.cpp  GLTF.hpp  GLTFLoading.cpp  GLTFToNode.cpp  GUITexture.hpp  IMesh.hpp  IWindow.hpp  KTXTexture.cpp  KTXTexture.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  RGBETexture.cpp  RGBETexture.hpp  SceneFile.cpp  SceneFile.hpp  Skybox.cpp  Skybox.hpp  Texture.hpp  Window.cpp  Window.hpp  logger.hpp  node_registration.cpp  node_registration.hpp  uninitialized_error.hpp
src/common/shaders/: ColoredTextShader.cpp  ColoredTextShader.hpp  CommonShader.cpp  CommonShader.hpp  ShaderManager.cpp  ShaderManager.hpp  SkyboxShader.cpp  TexturedShader.cpp  TexturedShader.hpp  UnshadedShader.cpp  UnshadedShader.hpp  UnshadedTexturedShader.cpp  UnshadedTexturedShader.hpp
src/gui/: FreeTypeFont.cpp  GUITexture.cpp  GUITransform.cpp
src/nodes/: CompleteSpatialNode.cpp  Node.cpp  RootNode.hpp  SpatialNode.cpp
src/nodes/core/: CompleteSpatialNode.cpp  CompleteSpatialNode.hpp  SpatialNode.cpp  SpatialNode.hpp
src/nodes/gui/: ButtonNode.cpp  CompleteGUINode.cpp  GUICanvas.cpp  GUINode.cpp  TextNode.cpp
src/nodes/physics/: BulletRigidBodyNode.cpp
src/nodes/rendering/: CameraNode.cpp  DrawableCompleteSpatialNode.cpp  DrawableNode.cpp  ExplosionParticlesNode.cpp  PBRDrawableNode.cpp  PointLightNode.cpp  SpectatorCameraNode.cpp  SpotLight.cpp
src/objects/: BitmapTextObject.cpp  BitmapTextObject.hpp  BitmapTextObject2D.cpp  BitmapTextObject2D.hpp  Camera.cpp  Camera.hpp  ControllableCamera.cpp  ControllableCamera.hpp  ControllableCylinder.cpp  ControllableCylinder.hpp  CuboidObject.cpp  CuboidObject.hpp  DrawableObject.cpp  DrawableObject.hpp  FloorObject.cpp  FloorObject.hpp  ImageObject.cpp  ImageObject.hpp  ImageObject2D.cpp  ImageObject2D.hpp  MonochromeDrawableObject.cpp  MonochromeDrawableObject.hpp  MovingLightBulb.cpp  MovingLightBulb.hpp  PointLight.cpp  PointLight.hpp  RectangularPhysicsObject.cpp  RectangularPhysicsObject.hpp  RectangularWall.cpp  RectangularWall.hpp  SkyboxObject.cpp  SkyboxObject.hpp  SpatialObject.cpp  SpatialObject.hpp  SpotLight.cpp  SpotLight.hpp  TexturedDrawableObject.cpp  TexturedDrawableObject.hpp  UnshadedDrawableObject.cpp  UnshadedDrawableObject.hpp
src/physics/: BulletPhysicsServer.cpp
src/rendering/: BloomFramebuffer.cpp  BloomFramebuffer.hpp  BloomRenderer.cpp  BloomRenderer.hpp  ExposureController.cpp  ExposureController.hpp  FPSMeter.cpp  GLFWWindow.cpp  GLTFLoading.cpp  GLTFToNode.cpp  LightingEnvironment.cpp  MainFramebuffer.cpp  MainFramebuffer.hpp  ManagedFramebufferID.cpp  ManagedRenderbufferID.cpp  ManagedRenderbufferID.hpp  Mesh.cpp  MeshPrimitives.cpp  OpenGLDebug.cpp  OpenGLDebug.hpp  RenderingServer.cpp  Shader.cpp  ShadowMap.cpp  Skybox.cpp  Texture.cpp  TextureFromKTX.cpp  TextureFromRGBE.cpp  VkFormatInfo.cpp  VkFormatInfo.hpp
src/rendering/shaders/: BRDFIntegrationMapperShader.cpp  BRDFIntegrationMapperShader.hpp  ColoredTextShader.cpp  ColoredTextShader.hpp  EquirectangularMapperShader.cpp  EquirectangularMapperShader.hpp  GUIRectangleShader.cpp  GUIRectangleShader.hpp  (+15 more)
src/shaders/: 2d_vertex.glsl  bloom_combine.frag  bloom_downsample.frag  bloom_upsample.frag  bloom_upsample_downsample.vert  brdf_integration_mapper.frag  brdf_integration_mapper.vert  colored_text.frag  colored_text.vert  colored_text_2d_fragment.glsl  colored_text_fragment.glsl  colored_text_vertex.glsl  equirectangular_mapper.frag  equirectangular_mapper.vert  explosion_particles.vert  gaussian_blur.frag  gui_rectangle.frag  gui_rectangle.vert  horizontal_gaussian_blur.frag  irradiance_precomputer.frag  luminance_computation_shader.frag  luminance_computation_shader.vert  main_fb_color_downsample.frag  monochrome_fragment.glsl  monochrome_vertex.glsl  pbr_shader.frag  pbr_shader.vert  postprocessing.frag  shadow_mapping.frag  skybox.frag  skybox.vert  skybox_fragment.glsl  skybox_vertex.glsl  specular_prefilter.frag  specular_prefilter.vert  textured-old.frag  textured-old.vert  textured.frag  textured.vert  textured_fragment.glsl  (+12 more)
src/structs/: Circle.cpp  Circle.hpp  Cylinder.cpp  Cylinder.hpp  GUITransform.hpp  HorLS.cpp  HorLS.hpp  HorLine.cpp  HorLine.hpp  QuadrantArc.cpp  QuadrantArc.hpp  Rect.cpp  Rect.hpp  RoundedRectangle.cpp  RoundedRectangle.hpp  Transform.hpp  VertLS.cpp  VertLS.hpp  VertLine.cpp  VertLine.hpp  dynarray.hpp  static_vector.hpp
src/utils/: Channel.hpp  glm_bullet_conversion.hpp  json_conversion.hpp  key_codes.hpp  ktx_loader.cpp  math.cpp  math.hpp  model_loader.cpp  primitive_meshes.cpp  primitive_meshes.hpp  rgbe_loader.cpp  shader_loader.cpp  shader_loader.hpp  texture_loader.cpp  texture_tools.cpp  texture_tools.hpp  texture_utils.cpp  texture_utils.hpp  utils.hpp  vbo_indexer.cpp
(+178 files in other folders)
